updated deps folder to now use the new server library. Also added project file in root folder of repo using subdir project to easily manage deps.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "deps/qhttpserver"]
 	path = deps/qhttpserver
 	url = https://github.com/nikhilm/qhttpserver/
+
+[submodule "deps/qhttp"]
+	path = deps/qhttp
+	url = https://github.com/azadkuh/qhttp.git
